--- a/20-isekai-tensei-hakka/env/web/Dockerfile
+++ b/20-isekai-tensei-hakka/env/web/Dockerfile
@@ -10,12 +10,13 @@ COPY wog3.tar.gz /tmp/wog3.tar.gz
 WORKDIR /tmp
 RUN tar -zxvf wog3.tar.gz && mv /tmp/wog3/* /usr/local/apache2/htdocs && rm -rf /tmp/*
 
-COPY rezero.php /usr/local/apache2/htdocs/rezero.php
-RUN crontab -l | { cat; echo "*/30 * * * * php /usr/local/apache2/htdocs/rezero.php"; } | crontab 
+COPY rezero.php /rezero
+RUN chmod 555 /rezero
+RUN crontab -l | { cat; echo "*/30 * * * * /rezero"; } | crontab 
 RUN cp /usr/local/apache2/htdocs/index.htm /usr/local/apache2/htdocs/index.html
 RUN chown -R root:root /usr/local/apache2/htdocs && \
     find /usr/local/apache2/htdocs -type d -exec chmod 555 {} \; && \
     find /usr/local/apache2/htdocs -type f -exec chmod 444 {} \;
 
 RUN chmod 777 /tmp
-CMD ["bash", "-c", "mysqld & sleep 3 && php /usr/local/apache2/htdocs/rezero.php & /usr/local/apache2/bin/apachectl -e info -DFOREGROUND "]
+RUN echo "#!/bin/bash\nset -e\ncron & mysqld & sleep 3 && /rezero & /usr/local/apache2/bin/apachectl -e info -DFOREGROUND" > /usr/local/bin/run
