--- a/17-kill-t-browser/env/killt/Dockerfile
+++ b/17-kill-t-browser/env/killt/Dockerfile
@@ -1,13 +1,15 @@
 FROM python:buster
 RUN apt-get -qqy update && \
     apt-get -qqy --no-install-recommends install \
-    qutebrowser xvfb && \
+    qutebrowser xvfb cron && \
     rm -rf /var/lib/apt/lists/* /var/cache/apt/*
 RUN pip install flask
 
 COPY server.py /
-RUN echo '#!/bin/sh\necho flag{Did_you_craft_a_0-Click-RCE_payload__or_just_d1rectory-l1sting-N-l0cal-f1le-r3ad}' > /proof_d2e4f0a6-55e8-4897-9ce0-e829cdc8279e.sh
-RUN chmod 555 /server.py /proof_*.sh
+RUN echo '#!/bin/sh\necho b6actf{d1d_you_s0f_ahn_RCE_cha-l3n-gee_w1f-out_RCE}' > /proof_d2e4f0a6-55e8-4897-9ce0-e829cdc8279e.sh
+RUN echo "#!/bin/sh\nrm -rf /tmp/*" > /cls
+RUN chmod 555 /server.py /proof_*.sh /cls
+RUN crontab -l | { cat; echo "*/30 * * * * /cls"; } | crontab
 
 WORKDIR /usr/share/javascript/pdf
 WORKDIR /tmp
@@ -16,13 +18,12 @@ COPY pdfjs-1.10.88-dist.zip .
 RUN unzip pdfjs-1.10.88-dist.zip -d pdfjs && \
     mv /tmp/pdfjs/* /usr/share/javascript/pdf && \
     rm -rf /tmp/*
+RUN chmod -R 555 /usr/share/javascript/pdf
 
 RUN useradd kyubey --create-home
-USER kyubey
 
 WORKDIR /tmp
-ENV FLAG flag{fird_Party_Does_Fu3led_up__Du3lDu3lGo_3ant_even_hekp}
 ENV G_SITEKEY 6Lfe2SEaAAAAAGurMvdKBjendG6oUDhdmOlVIvvj
 ENV G_SECRET 6Lfe2SEaAAAAAJVLnkjcJ-A2qY0_CCVnGSiODCAo
 ENV DISPLAY :99
-CMD ["sh","-c","Xvfb :99 -screen 0 640x400x8 -nolisten tcp & python3 /server.py"] 
+CMD ["bash","-c","cron & Xvfb :99 -screen 0 640x400x8 -nolisten tcp & runuser -u kyubey -- python /server.py"]
