redesigned the challenge

--- a/22-vs-code/chal.yml
+++ b/22-vs-code/chal.yml
@@ -7,6 +7,6 @@ categories:
 - ★★★☆☆
 points: 100
 released_at: '1970-01-01 12:00:00'
-flag: "b6actf{0n3_sM4LL_maP_f0R_Man;1_GiAn7_Fl4g_4_y4'all}"
+flag: "b6actf{d4zZzZl1ng_c0lOu125}"
 metadata:
   youtubeUrl: -0BYjJW4Wsk
