--- a/22-vs-code/src/.vscode/settings.json
+++ b/22-vs-code/src/.vscode/settings.json
@@ -1,54 +1,51 @@
 {
     "workbench.colorCustomizations": {
-        "editorBracketHighlight.foreground1": "#dc9",
-        "editorBracketHighlight.foreground2": "#ffbe33",
-        "editorBracketHighlight.foreground3": "#dc9",
-        "editorBracketHighlight.foreground4": "#ffbe33",
         "editor.selectionBackground": "#ffffff80",
-        "minimap.selectionHighlight": "#ff0000"
+        "minimap.background": "#202020"
     },
     "editor.tokenColorCustomizations": {
-        "types": "#d1491b",
-        "numbers": "#bd777f",
-        "strings": "#8f1313",
-        "comments": "#753128",
-        "keywords": "#9c2700",
-        "functions": "#f76c3e",
-        "variables": "#dc9",
+        "comments": "#315528", //first 2 comments
+        "functions": "#6cf73e", //enumerate
+        "keywords": "#279c00", //def,lambda,r ['26', '27', '28', '29', '2a', '2b', '2c'] 9c 0
+        "numbers": "#f5e6a0", // OVERWRITTEN BY constant.numeric
+        "strings": "#138f13", //M in encrypted flag
+        "types": "#49d11b", //49d1 ['16', '17', '18', '19', '1a', '1b']
+        "variables": "#ccdd99", //! flags 
         "textMateRules": [
+            {
+                "scope": [
+                    "source.python"
+                ],
+                "settings": {
+                    "foreground": "#5a8f5a" //first line
+                }
+            },
             {
                 "scope": "keyword.control",
                 "settings": {
-                    "foreground": "#ffbe33"
+                    "foreground": "#beff33" //import with
+                }
+            },
+            {
+                "scope": "keyword.operator",
+                "settings": {
+                    "foreground": "#ffffbe" //*<=
+                }
+            },
+            {
+                "scope": "keyword.operator.logical.python",
+                "settings": {
+                    "foreground": "#00ff00" //or
                 }
             },
             {
                 "scope": [
-                    "source.python",
-                    "source.raccoon",
-                    "keyword.operator"
-                ],
-                "settings": {
-                    "foreground": "#8f4f56"
-                }
-            },
-            {
-                "scope": "support.variable",
-                "settings": {
-                    "foreground": "#dc9"
-                }
-            },
-            {
-                "scope": [
-                    "keyword.operator.logical.python",
-                    "keyword.operator.logical.raccoon",
                     "entity.name.tag",
-                    "storage.modifier",
                     "constant.language",
                     "variable.language"
                 ],
                 "settings": {
-                    "foreground": "#9c2700"
+                    "foreground": "#9cff27" //9cff['25', '26', '27', '28', '29', '2a', '2c']
                 }
             },
             {
@@ -57,7 +54,16 @@
                     "constant.character.unicode"
                 ],
                 "settings": {
-                    "foreground": "#d68556"
+                    "foreground": "#85d656" //\x62
+                }
+            },
+            {
+                "scope": [
+                    "constant.character.set.regexp",
+                    "string.regexp"
+                ],
+                "settings": {
+                    "foreground": "#defaca" //A-Za-z0-9-_
                 }
             }
         ]
