--- a/33-rsacrt3/chal.yml
+++ b/33-rsacrt3/chal.yml
@@ -5,14 +5,7 @@ categories:
 - crypto
 points: 500
 released_at: '1970-01-01 12:00:00'
-flag: 'b6actf{h0w_c4n_y0u_c0mpu73_d109s_s00ooo_qu1ckly}'
-deployment:
-  resources:
-    limits:
-      cpu: "4"
-      memory: "1Gi"
-  type: normal
-  port: 30001
-  stateful: false
+flag: 'b6actf{0mgg99g99g9_y0u_c4n_d3c0upl3_prn9s}'
 metadata:
-  youtubeUrl: QqzVA3-1YTw
+  youtubeUrl: dQw4w9WgXcQ
+
