--- a/11-disconnect/chal.yml
+++ b/11-disconnect/chal.yml
@@ -7,3 +7,10 @@ categories:
 points: 500
 released_at: '1970-01-01 12:00:00'
 flag: 'b6actf{50ck37_15_n07_7h3_0nly_5y5c4ll_70_cr3473_50ck37}'
+deployment:
+  resources:
+    limits:
+      cpu: "4"
+      memory: "1Gi"
+  type: normal
+  port: 20003
