--- a/22-vs-code/src/.vscode/settings.json
+++ b/22-vs-code/src/.vscode/settings.json
@@ -72,6 +72,12 @@
                 "settings": {
                     "foreground": "#acfe09"
                 }
+            },
+            {
+                "scope": "constant.character",
+                "settings": {
+                    "foreground": "#138d13"
+                }
             }
         ]
     }
