--- a/22-vs-code/chal.yml
+++ b/22-vs-code/chal.yml
@@ -4,9 +4,9 @@ author: 'TWY, RaccoonNinja'
 categories:
 - misc
 - crypto
-- ★★★☆☆
+- ★★★★☆
 points: 100
 released_at: '1970-01-01 12:00:00'
-flag: "b6actf{d4zZzZl1ng_c0lOu125}"
+flag: "b6actf{D4zZ2l1ng_c0lOur5_bu7_u_hav3_s3En_nth_y37}"
 metadata:
   youtubeUrl: -0BYjJW4Wsk
