--- a/101-feedback/chal.yml
+++ b/101-feedback/chal.yml
@@ -2,11 +2,9 @@
 enabled: true
 author: 'Black Bauhinia'
 categories:
-- ☆☆☆☆☆
-points: 10
-released_at: '2022-11-12 10:00:00'
-flag: 'b6actf{TODO}'
+- misc
+points: 500
+released_at: '1970-01-01 12:00:00'
+flag: 'b6actf{th4nk5_f0r_p14y1n9_b4uh1ni4_c7f!}'
 metadata:
-  location:
-    lat: 22.30804
-    lon: 113.91848
+  youtubeUrl: Hroq64h65Os
