--- a/34-image-factory/chal.yml
+++ b/34-image-factory/chal.yml
@@ -3,10 +3,9 @@ enabled: true
 author: 'cire meat pop'
 categories:
 - pwn
-- ★★★★★
 points: 500
 released_at: '1970-01-01 12:00:00'
-flag: 'b6actf{test}'
+flag: 'b6actf{bE_4waR3_N0t_3v3rY_1iB_i5_seCuRe}'
 deployment:
   resources:
     limits:
