--- a/09-class-pollution/env/Dockerfile
+++ b/09-class-pollution/env/Dockerfile
@@ -1,17 +1,14 @@
 FROM ubuntu:20.04
 
 ENV HOST localhost:3000
-RUN echo "b6actf{testflag}" > /proof-of-p011ut10n-$(cat /dev/urandom | tr -dc [:alnum:] | fold -w 64 | head -n 1)
-RUN useradd b6auser --create-home
+ENV FLAG b6actf{testflag}
 
 RUN apt update && apt install -y python3 python3-pip
-RUN pip3 install Flask
+RUN pip3 install Flask 
 
 RUN mkdir /app
 COPY src/ /app
 
 WORKDIR /app
 
-# RUN pip3 install 
-USER b6auser
 CMD ["python3", "app.py"]
