Update all category in chall.yml

--- a/03-warmup-rsa/chal.yml
+++ b/03-warmup-rsa/chal.yml
@@ -2,7 +2,7 @@
 enabled: true
 author: 'grhkm'
 categories:
-- crypto
+- main-crypto
 points: 500
 released_at: '1970-01-01 12:00:00'
 flag: 'b6actf{y0u_mu5t_b3_c0nv1nc3d_th4t_lgn/5_is_gr34t3r_th4n_lgn/4_n0w}'
