--- a/100-sanity-check/chal.yml
+++ b/100-sanity-check/chal.yml
@@ -2,7 +2,7 @@
 enabled: true
 author: 'Black Bauhinia'
 categories:
-- misc
+- main-misc
 points: 500
 released_at: '1970-01-01 12:00:00'
 flag: 'b6actf{c0uld_y0u_1m4g1n3_b31n9_r1ckr0l13d_4t_th3_v33rrryy_b3g1nnnn1n9g}'
