--- a/01-how-to-stop-time/chal.yml
+++ b/01-how-to-stop-time/chal.yml
@@ -2,7 +2,7 @@
 enabled: true
 author: 'Mystiz'
 categories:
-- crypto
+- main-crypto
 points: 500
 released_at: '1970-01-01 12:00:00'
 flag: 'b6actf{h0w_c4n_y0u_c0mpu73_d109s_s00ooo_qu1ckly}'
