--- a/10-kernpass/chal.yml
+++ b/10-kernpass/chal.yml
@@ -2,8 +2,7 @@
 enabled: true
 author: 'botton'
 categories:
-- pwn
-- ★★★☆☆
+- main-pwn
 points: 500
 released_at: '1970-01-01 12:00:00'
 flag: 'b6actf{17_15_4n_345y_k3rn31_ch4113n63}'
