--- a/101-feedback/chal.yml
+++ b/101-feedback/chal.yml
@@ -2,7 +2,7 @@
 enabled: true
 author: 'Black Bauhinia'
 categories:
-- misc
+- main-misc
 points: 500
 released_at: '1970-01-01 12:00:00'
 flag: 'b6actf{th4nk5_f0r_p14y1n9_b4uh1ni4_c7f!}'
