--- a/15-instant chat/chal.yml
+++ b/15-instant chat/chal.yml
@@ -2,9 +2,8 @@
 enabled: true
 author: 'viky'
 categories:
-- reverse
+- main-reverse
 - web
-- ★☆☆☆☆
 points: 500
 released_at: '1970-01-01 12:00:00'
 flag: 'b6actf{f1r3_f1r3_my_f1r3b453_15_0n_f1r3!}'
