--- a/23-sqlmap-as-a-service/chal.yml
+++ b/23-sqlmap-as-a-service/chal.yml
@@ -2,9 +2,8 @@
 enabled: true
 author: 'ozetta'
 categories:
-- misc
-- ★★★☆☆
-points: 100
+- main-misc
+points: 500
 released_at: '1970-01-01 12:00:00'
 flag: 'b6actf{InjEcTThEInjEcTIngInjEcTors_AND_0_UNION_SELECT_1_--_1e308}'
 deployment:
