--- a/33-rsacrt3/chal.yml
+++ b/33-rsacrt3/chal.yml
@@ -2,7 +2,7 @@
 enabled: true
 author: 'Mystiz'
 categories:
-- crypto
+- main-crypto
 points: 500
 released_at: '1970-01-01 12:00:00'
 flag: 'b6actf{l0l_y0u_c4n_l34k_t3n_6i7s_fr0m_0n3_b1t_0f_1nf0rm4t1on}'
