--- a/38-pyjail3/chal.yml
+++ b/38-pyjail3/chal.yml
@@ -2,7 +2,7 @@
 enabled: true
 author: 'hoifanrd'
 categories:
-- pwn
+- main-pwn
 points: 500
 released_at: '1970-01-01 12:00:00'
 flag: 'b6actf{d3f1ni7e1y_n0t_c0py1n9_hkcertCTF2021_pyj4il_511f3ad4f3627b38d77cf4ab26c39ead}'
