--- a/08-forkmachine/chal.yml
+++ b/08-forkmachine/chal.yml
@@ -5,4 +5,4 @@ categories:
 - main-reverse
 points: 500
 released_at: '1970-01-01 12:00:00'
-flag: 'b6actf{CONGRATZ}' # to be changed
+flag: 'b6actf{Sp00n_M4ch1ne_1s_l3f7_a5_4n_3x3rc1s3_7o_th3_r34d3r}'
