--- a/09-hag/chal.yml
+++ b/09-hag/chal.yml
@@ -2,7 +2,7 @@
 enabled: true
 author: 'hollow'
 categories:
-- web
+- main-web
 points: 500
 released_at: '1970-01-01 12:00:00'
 flag: 'b6actf{p0llute_the_w0r1d_4_sweet_sweet_c00k1es}'
