--- a/16-carpe-diem/chal.yml
+++ b/16-carpe-diem/chal.yml
@@ -2,10 +2,10 @@
 enabled: true
 author: 'hollow'
 categories:
-- web
+- main-web
 points: 500
 released_at: '1970-01-01 12:00:00'
-flag: 'b6actf{SEIZEYOURDAY}'
+flag: 'b6actf{SEIZEYOURDAYs}'
 deployment:
   resources:
     limits:
