--- a/18-amnesia/chal.yml
+++ b/18-amnesia/chal.yml
@@ -2,7 +2,7 @@
 enabled: true
 author: 'hollow, Mystiz'
 categories:
-- web
+- main-web
 - crypto
 points: 500
 released_at: '1970-01-01 12:00:00'
@@ -16,4 +16,4 @@ deployment:
   port: 30018
   stateful: false
 metadata:
-  youtubeUrl: Mvec1GN_dtY
+  youtubeUrl: x7-X9snnEZI
