--- a/16-carpe-diem/env/web/src/package.json
+++ b/16-carpe-diem/env/web/src/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "puppeteer": "^19.7.0"
+    "puppeteer": "^19.7.0",
+    "hcaptcha": "^0.1.1"
   }
 }
