--- a/15-instant-chat/chal.yml
+++ b/15-instant-chat/chal.yml
@@ -8,4 +8,4 @@ points: 500
 released_at: '1970-01-01 12:00:00'
 flag: 'b6actf{f1r3_f1r3_my_f1r3b453_15_0n_f1r3!}'
 metadata:
-  youtubeUrl: -CnHSv1sjTCg
+  youtubeUrl: CnHSv1sjTCg
