change desc and youtube link (same song)

--- a/22-vs-code/chal.yml
+++ b/22-vs-code/chal.yml
@@ -8,4 +8,4 @@ points: 500
 released_at: '1970-01-01 12:00:00'
 flag: "b6actf{D4zZ2l1ng_c0lOur5_bu7_u_hav3_s3En_nth_y37}"
 metadata:
-  youtubeUrl: -0BYjJW4Wsk
+  youtubeUrl: zdaZbJNTHxc
