--- a/36-extrapolation/chal.yml
+++ b/36-extrapolation/chal.yml
@@ -7,4 +7,4 @@ points: 500
 released_at: '1970-01-01 12:00:00'
 flag: 'b6actf{c4n_y0u_trust_y0ur_scr33n_c4p}'
 metadata:
-  youtubeUrl: b4DUhBI7vvI
+  youtubeUrl: hBPKSCA-JR0
