--- a/08-forkmachine/chal.yml
+++ b/08-forkmachine/chal.yml
@@ -6,3 +6,5 @@ categories:
 points: 500
 released_at: '2023-08-19 00:00:00'
 flag: 'b6actf{Sp00n_M4ch1ne_1s_l3f7_a5_4n_3x3rc1s3_7o_th3_r34d3r}'
+metadata:
+  youtubeUrl: NLf8xl3vUfw
