--- a/07-telepathy/chal.yml
+++ b/07-telepathy/chal.yml
@@ -7,4 +7,4 @@ points: 500
 released_at: '2023-08-19 08:00:00'
 flag: 'b6actf{3ph3m3r41_m1nd_3tern41_b0nd}'
 metadata:
-  youtubeUrl: RmTAUDlcPSk
+  youtubeUrl: AsmxdD7DNKU
