--- a/16-carpe-diem/chal.yml
+++ b/16-carpe-diem/chal.yml
@@ -5,7 +5,7 @@ categories:
 - main-web
 points: 500
 released_at: '2023-08-19 00:00:00'
-flag: 'b6actf{SEIZEYOURDAYs}'
+flag: 'b6actf{SEIZEYOURDAY}'
 deployment:
   resources:
     limits:
